getFXProperty 메소드 관련 작업(기록용, 사용X)